front/src/components/Home/Home.css
@import url(https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.css);

body {color: #3a7dc1; font-family: 'Montserrat', sans-serif; font-size: 93%; font-weight:normal;margin: 0; }

/* Wallpaper */

@keyframes wallpaper-animation {
    0% {
        background-image: url('../../assets/bg1.jpg');
    }
    25% {
        background-image: url('../../assets/bg2.jpg');
    }
    75% {
        background-image: url('../../assets/bg3.jpg');
    }
  100% {
        background-image: url('../../assets/bg1.jpg');
    }
}

#table-main-screen {
    background-image: url('../../assets/bg1.jpg');
    background-size: cover;
    background-position: center center;
    animation: wallpaper-animation 20s infinite;
    max-height: 100vh;
    max-width: 100vw;
    font-family: 'Montserrat', sans-serif;
    color: #3a7dc1;
    text-align: center;
    overflow: hidden hidden;
}

/* END OF WALLPAPER */

/* BUTTONS */

#navbar__button {
    text-decoration: none;
    color: #fff;
    background-color: transparent;
    font-weight: bold;
    border: none;
    border-radius: 8vw;
    padding: 0.5rem 1rem;
    cursor: pointer;
    transition: background-color 0.3s ease;
    font-family: 'Montserrat', sans-serif;
}

#navbar__button:hover {
    background-color: #8C041D;
}

/* END OF BUTTONS */

/* HEADER */

.navbar {
    
    width: 100vw;
    height: 6vh;
    position: fixed;
    top: 0;
    left: 0;
    display: flex;
    justify-content: space-between;
    align-items: center;
    background-color: rgba(172, 6, 42,0.7);
    backdrop-filter: blur(8px);
    z-index: 1;
}

.navbar__title {

    color: #fff;
    font-size: 1.5rem;
    font-weight: bold;
    margin-left: 1vw;
    
}
  
.navbar__links {
    display: flex;
    justify-content: center;
    margin: 0;
    padding: 0;
}
  
.navbar__links li {
    margin: 0 0.5rem;
    list-style: none;
}
  
.navbar__links li:first-child {
    margin-left: 0;
}
  
.navbar__links li:last-child {
    margin-right: 0;
}
  
.navbar__links-container {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}

/* END OF HEADER */

/* CONTENT */

.content {
    width: 100vw;
    height: 94vh;
    margin-top: 8vh;
    margin-bottom: 8vh;
    
}

/* END OF CONTENT */

/* GRID */

/* there are 3 componets that will be displayed in the grid, one must fill the whole column and must be aound 1/3 of the width of the screen, the other two must will be in the other 2/3 of the screen width and each will use 1/2 of the height. the name of the big component is grid-item-big and the other two are grid-item-small-1 and  grid-item-small-2 */

.grid-container {
    display: grid;
    grid-template-columns: 1fr 2fr;
    grid-template-rows: 1fr 1fr;
    gap: 0.75vw 0.75vw;
    grid-template-areas:
        "grid-item-big grid-item-small-1"
        "grid-item-big grid-item-small-2";
    height: 90vh;
    box-sizing: border-box;
    margin-top: 6vh;
    margin-bottom: 6vh;
    margin-left: 0.75vw;
    margin-right: 0.75vw;

}

.grid-item-big {
    grid-area: grid-item-big;
    color: #000;
    background-color: transparent;
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 2rem;
    
}

.grid-item-small-1 {
    grid-area: grid-item-small-1;
    color: #000;
    background-color: transparent;
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 2rem;

}

.grid-item-small-2 {
    grid-area: grid-item-small-2;
    color: #000;
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 2rem;

}

/* END OF GRID */

/* Compoonent container */

.component-container-big {
    display: flex;
    box-sizing: border-box;
    height: 100%;
    background-color: rgba(255, 255, 255, 0.8);
    padding: 10px 10px;
    border-radius: 10px;
    flex-grow: 1;
    place-items: center;
}

.component-container-small-1 {
    display: flex;
    box-sizing: border-box;
    height: 100%;
    width: 100%;
    background-color: rgba(255, 255, 255, 0.8);
    padding: 10px 10px;
    border-radius: 10px;
    flex-grow: 1;
    place-items: center;
    align-items: center;
    
    
}

.component-container-small-2 {
    display: flex;
    box-sizing: border-box;
    height: 100%;
    background-color: rgba(255, 255, 255, 0.8);
    padding: 10px 10px;
    border-radius: 10px;
    flex-grow: 1;
    place-items: center;
    
    
}

/* END OF COMPONENT CONTAINER */

/* VEHICLE COMPONENT */

.vehicle-info-title{
    font-size: 1.5rem;
    font-weight: bold;
    text-align: center;
    margin-bottom: 1rem;
}

.vehicle-image {
    width: 100%;
    height: 100%;
    max-width: 20vw;
    object-fit: cover;
    border-radius: 10px;
}

.vehicle-info-container {
    display: block;
    width: 100%;
    align-items: center;
    box-sizing: border-box;
    p{
        font-weight: lighter;
        font-size: 1rem;
        text-align: le;
    }
    b{
        font-weight: bold;
        font-size: 1.25rem;
    }
    h1{
        font-size: 1.5rem;
        text-align: center;
    }
}

.vehicle-info-table {
    max-width: 100%;
    margin-left: auto;
    margin-right: auto;
    td {
        padding: 3rem;
        text-align: right;
    }
}

.vehicle-info {
    color: #000;
    background-color: transparent;
    display: block;
    justify-content: left;
    align-items: left;
    font-size: 2rem;
    
}

.vehicle-image {
    max-width: 20rem;
    max-height: 30rem;
    object-fit: contain;
    border-radius: 1rem;
}

